<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3333">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar">

    </include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp">


        <EditText
            android:id="@+id/txtOfficeId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:height="50dp"
            android:background="#FFF"
            android:hint="@string/office_id"
            android:paddingLeft="10dp" />

        <EditText
            android:id="@+id/txtSubject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:height="50dp"
            android:background="#FFF"
            android:hint="@string/subject"
            android:paddingLeft="10dp" />

        <EditText
            android:id="@+id/txtMemoBody"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFF"
            android:ems="10"
            android:gravity="left"
            android:hint="@string/memo_hint"
            android:inputType="textMultiLine"
            android:paddingLeft="10dp"
            android:paddingTop="10dp" />
    </LinearLayout>


</RelativeLayout>



